--- a/css/moonstone-light.css
+++ b/css/moonstone-light.css
@@ -1365,6 +1365,7 @@
 /* Title Above */
 .moon-header-title-above.no-border {
   border: none;
+  height: 43px;
 }
 .moon-header-title-above {
   width: 30px;
